Replace djl with ollama4j in hybrid example (Java 21)